[package]
name = "rfb"
version = "0.1.0"
description = "Implementation of the RFB protocol (RFC 6143), including a server implementation."
repository = "https://github.com/oxidecomputer/rfb"
readme = "README.md"
authors = ["Jordan Paige Hendricks <jordan@oxide.computer"]
license = "MPL-2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rfb"
path = "src/lib.rs"

[[example]]
name = "example-server"
path = "examples/server.rs"

[[example]]
name = "example-novnc"
path = "examples/novnc.rs"

# Prevent cargo from building shared code like a binary
[[example]]
name = "example-shared"
path = "examples/shared.rs"
crate-type = ["rlib"]

[dependencies]
anyhow = "1.0"
bitflags = "1.3.2"
slog = "2.7.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
slog-envlogger = "2.2.0"
slog-term = "2.9.0"
clap = { version = "3.2.5", features = ["derive"] }
image = "0.24.1"
warp = { version = "0.3.2" }
futures-util = { version = "0.3.21" }
